Address easy PR comments
Fixing names, javadoc, nullability annotations, removing unused code,
using identical super method.